--- a/wa/wa4/wa4.css
+++ b/wa/wa4/wa4.css
@@ -39,6 +39,7 @@ body {
   }
   
   .card article img{
-    max-height: 100%;
+    max-height: 750%;
     float: right;
+    background-color: rgba(0, 0, 0, 0.5);
   }
