--- a/JSProject/JSProject.css
+++ b/JSProject/JSProject.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Orbitron', sans-serif; /* Use the chosen font */
-    background-color: #1a1a1a; /* Dark background */
+    background-image: url(MorseCodeBackground.png);
     color: #00ff00; /* Bright green text for a sci-fi look */
     display: flex;
     justify-content: center;
